Fixed the issue on label error alignment in mail configuration

--- a/php/orangehrm/symfony/plugins/orangehrmAdminPlugin/web/css/listMailConfiguration.css
+++ b/php/orangehrm/symfony/plugins/orangehrmAdminPlugin/web/css/listMailConfiguration.css
@@ -1,4 +1,5 @@
 label.error[for="txtTestEmail"] {
     position: relative;
-    left: 292px;
+    left: 300px;
+    width:220px !important;
 }
